--- a/Bigio/Bigio.csproj
+++ b/Bigio/Bigio.csproj
@@ -43,6 +43,16 @@
     <Compile Include="BigArray\BigArrayEnumerator.cs" />
     <Compile Include="BigArray\Interfaces\IBalancer.cs" />
     <Compile Include="BigArray\Interfaces\IBigList.cs" />
+    <Compile Include="BigArray\JITO\Operations\AbstractOperationResolver.cs" />
+    <Compile Include="BigArray\JITO\Operations\Contains\ContainsOperationResolver.cs" />
+    <Compile Include="BigArray\JITO\Operations\Contains\ContainsOperationWithIndexOf.cs" />
+    <Compile Include="BigArray\JITO\Operations\Contains\ContainsOperation.cs" />
+    <Compile Include="BigArray\JITO\JITOMethodFactory.cs" />
+    <Compile Include="BigArray\JITO\MeasureManager.cs" />
+    <Compile Include="BigArray\JITO\Operations\AbstractOperation.cs" />
+    <Compile Include="BigArray\JITO\Operations\Contains\ContainsOperationWithLINQ.cs" />
+    <Compile Include="BigArray\JITO\PossibleRealizationTestData.cs" />
+    <Compile Include="BigArray\JITO\TestSampleManager.cs" />
     <Compile Include="BigArray\Support Classes\Balancer\AbstractFunctionBalancer.cs" />
     <Compile Include="BigArray\Support Classes\Balancer\SlowGrowBalancer.cs" />
     <Compile Include="BigArray\Support Classes\Balancer\FixedBalancer.cs" />
